--- a/index.html
+++ b/index.html
@@ -14,16 +14,23 @@ K.S<!DOCTYPE html>
             font-family: Arial, sans-serif;
             line-height: 1.6;
             color: #333;
+            background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+            min-height: 100vh;
         }
         header {
-            background: #2c3e50;
+            background: linear-gradient(to right, #2c3e50, #3498db);
             color: white;
             text-align: center;
             padding: 2rem;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         }
         nav {
-            background: #34495e;
+            background: linear-gradient(to right, #34495e, #2c3e50);
             padding: 1rem;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            position: sticky;
+            top: 0;
+            z-index: 1000;
         }
         nav ul {
             list-style: none;
@@ -34,33 +41,65 @@ K.S<!DOCTYPE html>
         nav a {
             color: white;
             text-decoration: none;
+            padding: 0.5rem 1rem;
+            border-radius: 4px;
+            transition: all 0.3s ease;
+        }
+        nav a:hover {
+            background: rgba(255, 255, 255, 0.1);
+            transform: translateY(-2px);
+        }
+        nav a.active {
+            background: rgba(255, 255, 255, 0.2);
         }
         section {
             padding: 2rem;
             margin: 1rem auto;
             max-width: 800px;
+            background: rgba(255, 255, 255, 0.9);
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            backdrop-filter: blur(5px);
+            transition: transform 0.3s ease;
         }
-        .skills-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 1rem;
-            margin-top: 1rem;
+        section:hover {
+            transform: translateY(-5px);
         }
         .skill-item {
-            background: #f8f9fa;
+            background: linear-gradient(145deg, #ffffff, #f0f0f0);
             padding: 1rem;
             border-radius: 5px;
             text-align: center;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+            transition: transform 0.3s ease;
+        }
+        .skill-item:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        }
+        .contact-item {
+            background: linear-gradient(145deg, #ffffff, #f0f0f0);
+            padding: 1rem;
+            border-radius: 5px;
+            text-align: center;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+            transition: transform 0.3s ease;
+        }
+        .contact-item:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
         }
         footer {
-            background: #2c3e50;
+            background: linear-gradient(to right, #2c3e50, #3498db);
             color: white;
             text-align: center;
             padding: 1rem;
             position: fixed;
             bottom: 0;
             width: 100%;
+            box-shadow: 0 -2px 5px rgba(0,0,0,0.1);
         }
+    }
         .contact-info {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -76,6 +115,28 @@ K.S<!DOCTYPE html>
     </style>
 </head>
 <body>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            // Smooth scrolling for navigation links
+            document.querySelectorAll('nav a').forEach(anchor => {
+                anchor.addEventListener('click', function (e) {
+                    e.preventDefault();
+                    const targetId = this.getAttribute('href');
+                    document.querySelector(targetId).scrollIntoView({
+                        behavior: 'smooth'
+                    });
+                    
+                    // Update active state
+                    document.querySelectorAll('nav a').forEach(a => a.classList.remove('active'));
+                    this.classList.add('active');
+                });
+            });
+            
+            // Set initial active state
+            const firstLink = document.querySelector('nav a');
+            if (firstLink) firstLink.classList.add('active');
+        });
+    </script>
     <header>
         <h1>Abishek Kandan K.S</h1>
         <p>Web Developer & Designer</p>
